--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.search.SearchFragment"
+    >
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.Search.SearchFragment">
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/locationEditText"
@@ -72,3 +76,4 @@
         app:rippleColor="@color/white"
         android:focusable="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
